# FilterCtrl

stub/: CMakeLists.txt
stub/src/app/: CMakeLists.txt  app.cpp  app.h  filter_ctrl.cpp  filter_ctrl.h  main_frame.cpp  main_frame.h  resource_id.h
